Enhance notebook index note handling and update related services
- Updated the description of the `indexNoteId` in `open_api_docs.yaml` and `NotebookPageClientView` to clarify its purpose and behavior.
- Introduced `NotebookService.reconcileNotebookIndexNotePointer` to manage the association between notebooks and their index notes, ensuring proper updates when notes are created, moved, or deleted.
- Refactored `TextContentController`, `NoteConstructionService`, `NoteMotionService`, and `NoteService` to utilize the new reconciliation method, improving the integrity of notebook index pointers.
- Added tests to verify the correct behavior of index note handling in various scenarios, including when the cached pointer is valid or invalid.
- Updated database ERD to reflect the relationship between notes and notebooks regarding the index note.